--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,6 +2,10 @@ DJANGO_SECRET_KEY=your-secret-key-here
 DEBUG=True
 ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0
 
+# Allow insecure HTTP for OAuth in local development
+# IMPORTANT: Remove this in production!
+OAUTHLIB_INSECURE_TRANSPORT=1
+
 # Google Calendar API credentials
 GOOGLE_CLIENT_ID=your-client-id.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=your-client-secret
