--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   backend:
     build:
@@ -11,13 +9,9 @@ services:
     volumes:
       - ./backend:/app
       - backend-static:/app/staticfiles
-    environment:
-      - DJANGO_SECRET_KEY=${DJANGO_SECRET_KEY:-django-insecure-dev-key}
-      - DEBUG=${DEBUG:-True}
-      - ALLOWED_HOSTS=${ALLOWED_HOSTS:-localhost,127.0.0.1,0.0.0.0,backend}
-      - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
-      - GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
-      - GOOGLE_REDIRECT_URI=${GOOGLE_REDIRECT_URI:-http://localhost:8000/api/auth/callback}
+      - backend-db:/app/data
+    env_file:
+      - ./backend/.env
     networks:
       - gcal-network
     restart: unless-stopped
@@ -32,8 +26,8 @@ services:
     volumes:
       - ./frontend:/app
       - /app/node_modules
-    environment:
-      - VITE_API_BASE_URL=${VITE_API_BASE_URL:-http://localhost:8000/api}
+    env_file:
+      - ./frontend/.env
     networks:
       - gcal-network
     depends_on:
@@ -46,3 +40,4 @@ networks:
 
 volumes:
   backend-static:
+  backend-db:
